--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -23,7 +23,7 @@ title: 100 Days of Code
 description: >- # this means to ignore newlines until "baseurl:"
   Sammy Au's 100 Days of Code
 baseurl: /dev-blog # the subpath of your site, e.g. /blog
-url: samau3.github.io # the base hostname & protocol for your site, e.g. http://example.com
+url: https://samau3.github.io # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  samau3
 
 # Build settings
